--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <div class="page page1">
+    <!-- <div class="page page1">
       <h1>Ray投射光线</h1>
       <h3>THREE.Raycaster实现3D交互效果</h3>
     </div>
@@ -19,7 +19,7 @@
     <div class="page page3">
       <h1>活泼点光源</h1>
       <h3>点光源围绕照亮小球</h3>
-    </div>
+    </div> -->
     <script src="./main/main.js"></script>
   </body>
 </html>
